Mejoras en la muestra del texto

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 <div class="col-md-8">
                     <div class="card">
                         <div class="card-header">
-                            <h1>Speech Voice Recognition</h1>
+                            <h1 class="text-center">
+                                Speech Voice Recognition
+                            </h1>
                         </div>
                         <div class="card-body">
                             <!-- Div que contiene el icono animado -->
